Completed the features box page

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,84 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+}
+
 #title {
   background-color: #ff4c68;
+  color: white;
 }
+
 .container-fluid {
   padding: 3% 15%;
 }
+
 h1 {
+  font-size: 3.5rem;
   font-family: "Montserrat", sans-serif;
-  /* font-family: "Ubuntu", sans-serif; */
+  font-weight: 900;
+}
+
+h3{
+  font-family: "Montserrat", sans-serif;
+  font-weight:600;
+}
+
+p{
+  color: #7a7a7a;
+}
+
+/** Nav Bar  */
+
+.navbar{
+  padding-bottom:4.5rem;
+}
+
+.navbar-brand{
+  font-family: "Ubuntu", sans-serif;
+  font-size: 2.5rem;
+}
+
+.nav-item{
+  padding: 0 18px;
+}
+
+.nav-link{
+  font-size: 1.2rem;
+}
+
+/** Download Buttons */
+
+.download-btn{
+  margin: 5% 3% 5% 0;
+}
+
+/** Title Image */
+
+.title-img{
+  width: 60%;
+  transform: rotate(25deg);
+}
+
+/** Features */
+#features{
+  padding: 7% 15%;
+}
+
+.features-box{
+  padding: 5%;
+  text-align: center;
+}
+
+.features-icon{
+  color: #ef8172;
+  margin: 1rem;
+}
+.features-icon:hover{
+  color: #ff4c68;
 }
