--- a/css/styles.css
+++ b/css/styles.css
@@ -1,84 +1,197 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: "Montserrat", sans-serif;
   font-weight: 500;
+  text-align: center;
 }
 
-#title {
-  background-color: #ff4c68;
-  color: white;
+h1,h2,h3,h4,h5,h6 {
+  font-family: "Montserrat", sans-serif;
+}
+
+p {
+  color: #7a7a7a;
 }
 
 .container-fluid {
-  padding: 3% 15%;
+  padding: 3% 15% 7%;
 }
 
-h1 {
-  font-size: 3.5rem;
-  font-family: "Montserrat", sans-serif;
-  font-weight: 900;
+.colored-section{
+  background-color: #ff4c68;
 }
 
-h3{
-  font-family: "Montserrat", sans-serif;
-  font-weight:600;
-}
-
-p{
-  color: #7a7a7a;
+.white-section{
+  background-color: white;
 }
 
 /** Nav Bar  */
 
-.navbar{
-  padding-bottom:4.5rem;
+.navbar {
+  padding-bottom: 4.5rem;
 }
 
-.navbar-brand{
+.navbar-brand {
   font-family: "Ubuntu", sans-serif;
   font-size: 2.5rem;
 }
 
-.nav-item{
+.nav-item {
   padding: 0 18px;
 }
 
-.nav-link{
+.nav-link {
   font-size: 1.2rem;
 }
 
 /** Download Buttons */
 
-.download-btn{
+.download-btn {
   margin: 5% 3% 5% 0;
 }
 
-/** Title Image */
+/** Title Section*/
 
-.title-img{
-  width: 60%;
+#title {
+  color: white;
+  text-align: left;
+}
+
+.title-text {
+  font-size: 3.5rem;
+  font-weight: 900;
+}
+
+.title-img {
+  /* width: 60%; */
+  width: 19%;
   transform: rotate(25deg);
+  position: absolute;
+  right: 30%;
+  z-index: 1;
 }
 
 /** Features */
-#features{
+
+#features {
   padding: 7% 15%;
+  background-color: white;
+  position: relative;
+  z-index: 2;
 }
 
-.features-box{
+.feature-text {
+  font-weight: 600;
+}
+
+.features-box {
   padding: 5%;
+}
+
+.features-icon {
+  color: #ff4c68;
+  margin: 1rem;
+}
+.features-icon:hover {
+  color: #ef8172;
+}
+
+/** Testimonials Section  */
+
+#testimonials {
+  color: white;
   text-align: center;
 }
 
-.features-icon{
-  color: #ef8172;
-  margin: 1rem;
+.testimonial-text {
+  font-size: 3rem;
+  font-weight: 00;
 }
-.features-icon:hover{
-  color: #ff4c68;
+
+.testimonial-img {
+  width: 20%;
+  border-radius: 100%;
+  margin: 20px;
+}
+
+.carousel-item {
+  padding: 7% 15%;
+}
+
+/** Press Section */
+
+#press {
+  padding-bottom: 30px;
+}
+
+.press-img {
+  width: 15%;
+  margin: 0 20px 60px;
+}
+
+/** Pricing Section */
+
+#pricing {
+  padding: 100px;
+  text-align: center;
+}
+
+.pricing-text {
+  font-size: 3rem;
+  font-weight: 500;
+}
+
+.dog-breed-text {
+  font-weight: 600;
+}
+
+.pricing-text-bold {
+  font-weight: 900;
+}
+
+.pricing-column {
+  padding: 3% 2%;
+}
+
+/** Call to Action Section */
+#cta {
+  color: white;
+  padding: 7% 15% 3%;
+}
+
+/** Footer Section */
+#footer {
+  height: 10vh;
+}
+
+.foot-icon i {
+  color: black;
+}
+
+.cta-text {
+  font-size: 3rem;
+  line-height: 1.5;
+  font-weight: 600;
+}
+
+/** Media Queries */
+
+@media screen and (max-width: 1028px) {
+  #title {
+    text-align: center;
+  }
+  .title-img {
+    position: static;
+    width: 60%;
+    transform: rotate(0);
+  }
 }
